# docodego-boilerplate

./: .gitignore  AGENTS.md  CLAUDE.md
.claude/: settings.json
.docodego/audits/behavioral/: app-admin-bans-a-user.json  (+80 more)
.docodego/example/: SPEC-WEBSITE-homepage.md
.docodego/specs/: REVIEW.md  ROADMAP.md  product-context.md
.docodego/tools/: README.md  audit-all  pyproject.toml  run  tools.env
.docodego/tools/audit_all/: __init__.py  __main__.py
.docodego/tools/ccs_scorer/: __init__.py  __main__.py  anti_gaming.py  parser.py  reporter.py  scorer.py
.docodego/tools/csg_scorer/: __init__.py  __main__.py  anti_gaming.py  dim_constants_http.py  dim_state_perms.py  extractors.py  parser.py  reporter.py  scorer.py  types.py
.docodego/tools/dashboard/: __init__.py  __main__.py  loader.py  template.html
.docodego/tools/design/: ccs.md  csg.md  ics.md  scr.md  sds.md  shs.md
.docodego/tools/docs/: ccs.md  csg.md  ics.md  scr.md  sds.md  shs.md
.docodego/tools/ics_scorer/: __init__.py  __main__.py  anti_gaming.py  parser.py  reporter.py  scorer.py
.docodego/tools/scoring_common/: __init__.py  audit.py  cli.py  reporter.py  types.py
.docodego/tools/scr_scorer/: __init__.py  __main__.py  anti_gaming.py  parser.py  registry.py  reporter.py  scorer.py
.docodego/tools/sds_scorer/: __init__.py  __main__.py  anti_gaming.py  dim_input_defense.py  dim_threat_auth.py  parser.py  reporter.py  scorer.py
.docodego/tools/shs_scorer/: __init__.py  __main__.py  anti_gaming.py  dim_budget_structure.py  dim_status_refs.py  parser.py  reporter.py  scorer.py
(+322 files in other folders)
